# homework10

./: pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
quotes/: add_data_from_mongo.py  test.py
quotes/quoteapp/: forms.py  models.py  urls.py  views.py
quotes/quoteapp/templates/quoteapp/: base.html  index.html  quote.html
quotes/quotes/: settings.py
